@@ -2,7 +2,6 @@ package com.wilaya.signalement_service.service;
 
 import com.wilaya.signalement_service.dto.CreerSignalementRequest;
 import com.wilaya.signalement_service.exception.DoublonSignalementException;
-import com.wilaya.signalement_service.exception.RessourceNonTrouveeException;
 import com.wilaya.signalement_service.messaging.SignalementEventPublisher;
 import com.wilaya.signalement_service.model.*;
 import com.wilaya.signalement_service.policy.PolicyCalculGravite;
@@ -10,20 +9,18 @@ import com.wilaya.signalement_service.policy.ValidateurCIN;
 import com.wilaya.signalement_service.repository.SignalementRepository;
 import com.wilaya.signalement_service.storage.FileStorageService;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.mock.web.MockMultipartFile;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.Collections;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -34,56 +31,58 @@ class SignalementServiceTest {
     @Mock private ValidateurCIN validateurCIN;
     @Mock private SignalementEventPublisher eventPublisher;
     @Mock private FileStorageService fileStorageService;
-    @Mock private MultipartFile photo;
 
-    @InjectMocks private SignalementService signalementService;
+    @InjectMocks
+    private SignalementService signalementService;
 
     private CreerSignalementRequest request;
 
     @BeforeEach
     void setUp() {
-        request = new CreerSignalementRequest("AB123456", TypeIntervention.VOIRIE, "Desc", "Zone");
+        request = new CreerSignalementRequest(
+                "AB123456", TypeIntervention.VOIRIE, "Nid de poule", "Zone A", "Rue Principale"
+        );
     }
 
     @Test
-    void testCreerSignalementSucces() {
+    @DisplayName("Devrait créer un signalement avec succès si valide")
+    void creerSignalement_Succes() {
+        // Given
         when(validateurCIN.estValide(anyString())).thenReturn(true);
-        when(repository.findByTypeAndZoneAndDateCreationAfterAndStatutNotIn(any(), anyString(), any(), any())).thenReturn(List.of());
-        when(repository.findByCinDeclarantAndDateCreationAfterAndStatutNotIn(anyString(), any(), any())).thenReturn(List.of());
-        when(policyCalculGravite.calculer(any(), anyString())).thenReturn(NiveauGravite.MOYENNE);
+        when(repository.findByTypeAndZoneAndAdresseAndDateCreationAfterAndStatutNotIn(
+                any(), any(), any(), any(), any())).thenReturn(Collections.emptyList());
+        when(repository.findByCinDeclarantAndDateCreationAfterAndStatutNotIn(
+                any(), any(), any())).thenReturn(Collections.emptyList());
+
+        when(policyCalculGravite.calculer(any(), any())).thenReturn(NiveauGravite.MOYENNE);
+
+        // Mock de sauvegarde pour retourner le signalement
         when(repository.save(any(Signalement.class))).thenAnswer(i -> i.getArguments()[0]);
 
-        Signalement result = signalementService.creerSignalement(request, photo);
+        // When
+        Signalement result = signalementService.creerSignalement(request, null);
 
+        // Then
         assertNotNull(result);
-        verify(repository).save(any(Signalement.class));
-    }
-
-    @Test
-    void testCreerSignalementDoublonException() {
-        when(validateurCIN.estValide(anyString())).thenReturn(true);
-        Signalement existing = new Signalement("AB123456", TypeIntervention.VOIRIE, "desc", "url", "Zone", NiveauGravite.BASSE);
-        when(repository.findByTypeAndZoneAndDateCreationAfterAndStatutNotIn(any(), anyString(), any(), any())).thenReturn(List.of(existing));
-
-        assertThrows(DoublonSignalementException.class, () -> signalementService.creerSignalement(request, photo));
-    }
-
-    @Test
-    void testChangerStatutSucces() {
-        UUID id = UUID.randomUUID();
-        Signalement s = new Signalement("AB123", TypeIntervention.VOIRIE, "d", "u", "z", NiveauGravite.BASSE);
-        when(repository.findById(id)).thenReturn(Optional.of(s));
-        when(repository.save(any(Signalement.class))).thenReturn(s);
-
-        Signalement result = signalementService.changerStatut(id, StatutSignalement.CLASSIFIE);
-
+        assertEquals("AB123456", result.getCinDeclarant());
         assertEquals(StatutSignalement.CLASSIFIE, result.getStatut());
-        verify(eventPublisher).publierSignalementClassifie(any());
+        verify(eventPublisher, times(1)).publierSignalementClassifie(any());
     }
 
     @Test
-    void testTrouverParNumeroSuiviNonTrouve() {
-        when(repository.findByNumeroSuivi("NONE")).thenReturn(Optional.empty());
-        assertThrows(RessourceNonTrouveeException.class, () -> signalementService.trouverParNumeroSuivi("NONE"));
+    @DisplayName("Devrait lever DoublonSignalementException si un doublon existe")
+    void creerSignalement_DoublonExistant() {
+        // Given
+        when(validateurCIN.estValide(anyString())).thenReturn(true);
+
+        // Simuler un doublon trouvé dans le repository
+        Signalement doublon = new Signalement("AB123456", TypeIntervention.VOIRIE, "Desc", "url", "Zone A", NiveauGravite.BASSE, "Rue Principale");
+        when(repository.findByTypeAndZoneAndAdresseAndDateCreationAfterAndStatutNotIn(
+                any(), any(), any(), any(), any())).thenReturn(Collections.singletonList(doublon));
+
+        // When & Then
+        assertThrows(DoublonSignalementException.class, () -> {
+            signalementService.creerSignalement(request, null);
+        });
     }
 }
